--- a/sem-1/WT/Lab-5/Layout-1/style.css
+++ b/sem-1/WT/Lab-5/Layout-1/style.css
@@ -1,57 +1,81 @@
 *{
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
 }
-
 .container{
-    border: 1px solid black;
+    height: 100%;
+    width: 100%;
 }
-
 .navbar{
-    height: 75px;
+    width: 100%;
+    height: 100px;
+    overflow: hidden;
 }
-
 .navbar .logo{
-    border: 1px solid red;
-    width: 225px;
-    height: 75px;
     float: left;
-}
-
-.navbar .logo .logohere{
-    margin-left: 35px;
-    margin-top: 15px;
-}
-
-.navbar .links{
-    padding: 25px;
-    float: left;
-}
-
-.main{
-    border: 1px solid black;
-    height: 575px;
-}
-
-.main .sidebar{
-    width: 400px;
-    border: 2px solid yellow;
-    height: 575px;
-}
-
-.main .sidebar .sidebox{
-    border: 1px solid black;
-    width: 285px;
-    padding: 25px;
-    margin: auto;
+    width: 20%;
+    height: 100%;
     text-align: center;
-    margin-top: 20px;
+    border: 3px solid black;
 }
-
-.main .maincontent{
-    border: 1px solid green;
-    height: 575px;
-    width: 1190px;
-    float: right;
-    flex: 1;
+.navbar .links{
+    width: 100%;
+    border: 3px solid red;
+    height: 100%;
+}
+.links .childLink{
+    font-size: 20px;
+    padding: 45px;
+    margin: 10px;
+}
+.sidebar{
+    width: 30%;
+    border: 2px solid rebeccapurple;
+    float: left;
+    height: 541.5px;
+}
+.box{
+    border: 2px solid black;
+    width: 60%;
+    text-align: center;
+    margin-left: 17%;
+    margin-top: 12%;
+    margin-bottom: 5%;
+}
+.content{
+    width: 100%;
+    border: 2px sold brown;
+}
+.contentBox{
+    border: 2px solid pink;
+    overflow: hidden;
+}
+.grop{
+    border: 2px solid gray;
+    width: 90%;
+    float: left;
+    margin: 5%;
+    text-align: center;
+}
+.gropChild
+{
+    border: 2px solid gray;
+    width: 40%;
+    height: 100px;
+    float: left;
+    margin: 3%;
+}
+.gropChild2
+{
+    border: 2px solid gray;
+    width: 25%;
+    height: 100px;
+    float: left;
+    margin: 3%;
+}
+.footer{
+    text-align: center;
+    width: 100%;
+    height: 111px;
+    border: 2px solid dodgerblue ;
 }
