--- a/sem-1/WT/Lab-5/layout-2/style.css
+++ b/sem-1/WT/Lab-5/layout-2/style.css
@@ -1,8 +1,40 @@
-.header{
-    height: 40px;
-    background-color: palevioletred;
+*{
+    margin: 0;
+    padding: 0;
 }
-.content{
-    height: 650px;
-    background-color: yellow;
+body{
+    background-color: skyblue;
+    margin: 1%;
 }
+.navbar{
+    width: 100%;
+    background-color: purple;
+    color: white;
+}
+.main{
+    background-color: orange;
+    height: 500px;
+}
+.group{
+    color: white;
+    margin: 1%;
+    width: 50%;
+    float: left;
+}
+.entry{
+    background-color: black;
+    margin: 2%;
+    padding: 2%;
+}
+.sidebar{
+    color: white;
+    background-color: black;
+    overflow: hidden;
+    padding: 2%;
+    margin: 3%;
+    height: 150px;
+} 
+.footer{
+    background-color: darkblue;
+    color: white;
+}  
