--- a/sem-1/WT/Project/assets/style.css
+++ b/sem-1/WT/Project/assets/style.css
@@ -9,6 +9,19 @@ body {
   color: #666;
   border-radius: 25px;
 }
+.page-black-content {
+  background-color: #1f2122;
+  color: #666;
+  border-radius: 25px;
+}
+
+.logo {
+  color: #e75e8d;  
+  font-weight: bold;
+  font-size: 36px;  
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
 
 .nav-link {
   font-weight: 500;
@@ -84,7 +97,64 @@ body {
 .bi-star-fill {
   color: yellow;
 }
-.bi-download {
-  color: #ec6090;
+.bi-download{
+  color: #e75e8d;
+}
+
+.game-item {
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  border-radius: 15px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid #444;
+}
+
+.game-img {
+  width: 50px;
+  height: 50px;
+  border-radius: 15px;
+  margin-right: 20px;
+}
+
+.game-item h5 {
+  color: #fff;
+  margin: 0;
+}
+
+.game-header{
+  color: #fff;
+}
+
+.game-item p {
+  margin: 0;
+}
+
+.btn-download {
+  color: #ff6584;
+  border: 1px solid #ff6584;
+  background-color: transparent;
+  padding: 5px 10px;
+  border-radius: 10px;
+  transition: 0.3s;
+}
+
+.btn-download:hover {
+  color: #fff;
+  background-color: #ff6584;
+}
+
+.btn-downloaded {
+  color: #666;
+  border: 1px solid #666;
+  background-color: transparent;
+  padding: 5px 10px;
+  border-radius: 10px;
+  transition: 0.3s;
+}
+
+.btn-downloaded:hover {
+  color: #fff;
+  background-color: #666;
 }
 
