--- a/sem-1/WT/Project/assets/style.css
+++ b/sem-1/WT/Project/assets/style.css
@@ -158,3 +158,10 @@ body {
   background-color: #666;
 }
 
+.detail{
+  color: whitesmoke;  
+  font-weight: bold;
+  font-size: 45px;  
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+}
